intro_text modify
text modify - 1

--- a/index.html
+++ b/index.html
@@ -63,23 +63,23 @@
                             <h3>버튼 누르면 다음으로 넘어갑니다^^</h3>
                         </div>
                         <div class="item intro_1_text">
-                            <h1>정면은 부끄러우니, 뒷모습으로만...</h1>
+                            <h1>정면은 부끄러우니, 뒷모습만..</h1>
                             <br>
-                            <h3>이번 학기는 기숙사에서 지내고 있습니다.</h3>
+                            <h3>요즘은 기숙사 생활 중입니다.</h3>
                             <br>
                             <h3>이 사진은 탈모 체크중.. </h3>
                         </div>
                         <div class="item intro_2_text">
                             <h1>강아지, 고양이를 좋아합니다.</h1>
                             <br>
-                            <h3>산책은 같이 뛰며 달리기 시합을 합니다.</h3>
+                            <h3>산책하며 같이 달리기 시합을 합니다.</h3>
                             <br>
                             <h3>강아지가 이기면 간식~</h3>
                         </div>
                         <div class="item intro_3_text">
-                            <h1>혼자 여행 다니는 것을 좋아합니다.</h1>
+                            <h1>혼자 여행을 좋아합니다.</h1>
                             <br>
-                            <h3>그럴 때, 진지하게 미래를 설계해 봅니다.</h3>
+                            <h3>그럴 때, 진지하게 미래를 설계합니다.</h3>
                             <br>
                             <h3>하하하</h3>
                         </div>
