feat> mobile bar

--- a/index.html
+++ b/index.html
@@ -15,11 +15,15 @@
   <div class="page-wrapper">
     <div class="nav-wrapper">
       <div class="grad-bar"></div>
-      <nav class="navbar">
+      <nav class="navbar">        
         <img
           src="https://upload.wikimedia.org/wikipedia/en/thumb/c/c8/Bluestar_%28bus_company%29_logo.svg/1280px-Bluestar_%28bus_company%29_logo.svg.png"
           alt="Company Logo">
-        
+        <div class="menu-toggle" id="mobile-menu">
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
+        </div>
         <ul class="nav no-search">
           <li id="nav-bar1" class="nav-item"><a>Home</a></li>
           <li id="nav-bar2" class="nav-item"><a>About</a></li>
