--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Strongly Typed by HTML5 UP</title>
+		<title>Creative Design Cube</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="main.css" />
+    <meta property="og:image" content="images/llo.jpg">
 	</head>
 	<body class="homepage is-preload">
 		<div id="page-wrapper">
