--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html>
 	<head>
 		<title>Creative Design Cube</title>
+		<meta property="og:title" content="Creative Design Cube">
+		<meta property="og:image" content="images/llo.jpg">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="main.css" />
-    <meta property="og:image" content="images/llo.jpg">
+    	
 	</head>
 	<body class="homepage is-preload">
 		<div id="page-wrapper">
